# guess-the-category

./: .gitignore  LICENSE  README.md  fourmolu.yaml  guess-the-category.cabal
.github/workflows/: ci.yml  deploy.yml
src/: Commands.hs  Defaults.hs  Main.hs  SlashClean.hs  State.hs  Util.hs
