cabal-version:      3.0
name:               guess-the-category
version:            0.1.0
synopsis:           Discord-based guessing game
description:        A simple game inspired by SpyFall
homepage:           https://github.com/lewis-weinberger/guess-the-category
license:            ISC
license-file:       LICENSE
author:             lewis-weinberger
build-type:         Simple

executable gtc
    main-is:          Main.hs
    build-depends:    base
                    , text
                    , discord-haskell
                    , containers
                    , random
    ghc-options:     -Wall -threaded
    hs-source-dirs:   src
    other-modules:    Commands
                    , State
                    , Util
    default-language: Haskell2010
